fix heading spacings so they match between editor and frontend

--- a/web/app/themes/helsinki-testbed/resources/assets/styles/common/typography.scss
+++ b/web/app/themes/helsinki-testbed/resources/assets/styles/common/typography.scss
@@ -6,8 +6,16 @@ h5,
 h6 {
   font-family: $font-default, Georgia, "Times", "Times New Roman", serif;
   font-weight: bold;
-  margin-block-start: 0;
-  margin-block-end: 0.5rem;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+
+  // increase specificity to override inline editor styles
+  @if not $is-frontend {
+    :root & {
+      margin-top: 0;
+      margin-bottom: 0.5rem;
+    }
+  }
 }
 
 h1 {
